--- a/css/style.css
+++ b/css/style.css
@@ -494,7 +494,7 @@ body {
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); }
     .card__picture--1 {
-      background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url(../images/pic1.jpg); }
+      background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url(../images/pic1.jpg); }  
     .card__picture--2 {
       background-image: linear-gradient(to right bottom, #7ed56f, #28b485), url(../images/pic2.jpg); }
     .card__picture--3 {
@@ -510,7 +510,7 @@ body {
     .card__picture--8 {
       background-image: linear-gradient(to right bottom, #7ed56f, #28b485), url(../images/pic8.jpg); }
     .card__picture--9 {
-      background-image: linear-gradient(to right bottom, #2998ff, #5643fa), url(../images/pic9.JPG); }
+      background-image: linear-gradient(to right bottom, #2998ff, #5643fa), url(../images/pic9.jpg); }
     .card__picture--10 {
       background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url(../images/pic10.jpg); }
     .card__picture--11 {
@@ -518,10 +518,10 @@ body {
     .card__picture--12 {
       background-image: linear-gradient(to right bottom, #2998ff, #5643fa), url(../images/pic12.jpg); }
   .card__heading {
-    font-size: 2.8rem;
+    font-size: 2.8rem; 
     font-weight: 300;
     text-transform: uppercase;
-    color: #fff;
+    color: #fff; 
     text-align: right;
     position: absolute;
     top: 17rem;
